Adds plugins and updates theme

--- a/web/app/themes/tennis-majors-v2/style.css
+++ b/web/app/themes/tennis-majors-v2/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
+Theme Name:         Tennis Majors Nuuk
 Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme.
-Version:            10.0.0-dev
-Author:             Roots
-Author URI:         https://roots.io/
+Description:        Tennis Majors is a Wordpress Theme
+Version:            1
+Author:             Studio Nuuk
+Author URI:         https://nuuk.fr/
 Text Domain:        sage
 License:            MIT License
 License URI:        https://opensource.org/licenses/MIT
