--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -1,6 +1,7 @@
 @import 'tailwindcss/base';
 
 @import 'common/global';
+@import 'common/diapo';
 
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
