add news width facetwp

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -48,3 +48,27 @@
 .btn {
     @apply uppercase text-sm mt-4 py-2 px-4 border-2 border-white
 }
+
+.facetwp-facet {
+    display: flex;
+}
+
+.facetwp-radio {
+    background-image: none !important;
+    margin: 0 1rem;
+    padding: 0.75rem 1.75rem !important;
+    border-radius: 2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 0.75rem;
+}
+
+.facetwp-radio.checked {
+    background-image: none !important;
+    background-color: white;
+    color: black;
+}
+
+.facetwp-counter {
+    display: none;
+}
