--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -50,6 +50,10 @@
     @apply uppercase text-sm mt-4 py-2 px-4 border-2 border-white
 }
 
+.btn--black {
+    @apply uppercase text-sm mt-4 py-2 px-4 border-2 border-black text-black
+}
+
 .facetwp-facet {
     display: flex;
 }
