--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -77,3 +77,20 @@
 .facetwp-counter {
     display: none;
 }
+
+#footer {
+    svg {
+        fill: black;
+        width: 100%;
+    }
+
+    nav {
+        ul {
+            @apply flex -mx-4;
+        }
+
+        li {
+            @apply mx-4 underline;
+        }
+    }
+}
