first draft single post

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -95,3 +95,15 @@
         }
     }
 }
+
+.article-container {
+    article {
+        max-width: calc(100% - 6rem);
+    }
+
+    .content {
+        p {
+            @apply mb-6;
+        }
+    }
+}
