--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -30,4 +30,36 @@
             @apply relative col-span-5;
         }
     }
+
+    &--slider {
+        @apply rounded-md bg-gray-100 p-5 h-screen max-h-card relative overflow-hidden text-white max-w-card;
+
+        .thumbnail {
+            @apply absolute w-full h-full object-cover top-0 left-0;
+        }
+
+        .gradient {
+            @apply absolute w-full h-full object-cover top-0 left-0 bg-gradient-to-t from-black to-transparent opacity-80;
+        }
+
+        .content {
+            @apply z-10 relative;
+        }
+
+        .title {
+            @apply uppercase font-bold text-lg mb-5;
+        }
+    }
+}
+
+.slider-preview-mode {
+    .slick-slide:first-child{
+        .preview--slider {
+            @apply max-w-cardfirst;
+
+            .title {
+                @apply uppercase font-bold text-2xl mb-5
+            }
+        }
+    }
 }
