--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -12,6 +12,7 @@
 @import 'footer';
 @import 'home';
 @import 'single';
+@import 'archive';
 
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
