--- a/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/facet.scss
@@ -1,12 +1,14 @@
 .facetwp-facet {
     display: flex;
+    margin-bottom: 0 !important;
 }
 
 .facetwp-radio {
     background-image: none !important;
-    margin: 0 1rem;
-    padding: 0.75rem 1.75rem !important;
+    margin: 0 0.25rem;
+    padding: 0.5rem 1.5rem !important;
     border-radius: 2rem;
+    border: 1px solid white;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 0.75rem;
