--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -85,7 +85,7 @@
         }
 
         .content {
-            @apply col-span-8 pt-4
+            @apply col-span-8 pt-4;
         }
 
         .title {
@@ -98,6 +98,22 @@
 
         .title {
             @apply font-bold text-3xl;
+        }
+    }
+
+    &--show {
+        @apply rounded-lg bg-gray-100 h-screen max-h-48 relative overflow-hidden text-white text-center;
+
+        .thumbnail {
+            @apply absolute w-full h-full object-cover top-0 left-0;
+        }
+
+        .gradient {
+            @apply w-full h-full object-cover top-0 left-0 bg-gradient-to-t from-black to-transparent opacity-80;
+        }
+
+        .title {
+            @apply absolute w-full px-4 font-bold uppercase text-xl text-white top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2;
         }
     }
 }
