--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -68,6 +68,14 @@
     }
 
     &--basic {
+        .thumbnail {
+            @apply relative pb-16/9 h-0;
+
+            img {
+                @apply w-full h-full object-cover absolute;
+            }
+        }
+
         .title {
             @apply font-bold mb-4 text-lg;
         }
@@ -93,8 +101,36 @@
         }
     }
 
+    &--default-home {
+        @apply grid grid-cols-12 gap-x-8;
+
+        .thumbnail {
+            @apply relative w-full pb-100-100 col-span-5 h-0;
+
+            img {
+                @apply absolute object-cover w-full h-full;
+            }
+        }
+
+        .content {
+            @apply col-span-7;
+        }
+
+        .title {
+            @apply font-bold mb-2 text-lg;
+        }
+    }
+
     &--flash {
         @apply pb-8 border-b-4 border-black;
+
+        .title {
+            @apply font-bold text-3xl;
+        }
+    }
+
+    &--flash-home {
+        @apply pb-8 border-b-4 border-white;
 
         .title {
             @apply font-bold text-3xl;
