little fix & newsletter form

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -7,6 +7,7 @@
 @import 'common/comments';
 @import 'common/user';
 @import 'common/newsletter';
+@import 'common/pagination';
 
 @import 'header';
 @import 'footer';
@@ -20,14 +21,6 @@
 
 #reply-title {
     display: none;
-}
-
-.newsletter-form {
-    @apply bg-black text-white px-4 mt-8;
-
-    &__container {
-        @apply grid grid-cols-12 max-w-screen-xl gap-x-8 m-auto py-8;
-    }
 }
 
 #shows-slider {
