--- a/web/app/themes/tennis-majors-v2/resources/styles/common/buttons.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/buttons.scss
@@ -1,11 +1,21 @@
 .btn {
-    @apply uppercase mt-4 py-2 text-sm px-6 py-4 border-2 border-white;
+    @apply uppercase mt-4 py-3 text-sm px-10 border-2 border-white;
 
     &--black {
-        @apply uppercase text-sm mt-4 py-2 px-4 border-2 border-black text-black;
+        @apply uppercase text-sm mt-4 py-3 px-10 border-2 border-black text-black;
     }
 
     &--submit {
         @apply rounded-full font-bold text-white bg-black;
+    }
+
+    &--text-arrow-right {
+        @apply relative;
+
+        &::after {
+            content: "";
+            @apply absolute top-1/2 -right-4 w-2 h-3 bg-no-repeat transform -translate-y-1/2;
+            background-image: url(../images/little-arrow-right.svg);
+        }
     }
 }
