--- a/web/app/themes/tennis-majors-v2/resources/styles/common/slick.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/slick.scss
@@ -9,3 +9,20 @@ margin: 0.5rem;
 .slick-slide {
     margin: 0.35rem;
 }
+
+#live-last-news-slider {
+    .slick-slide {
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            right: 0;
+            top: 0;
+            height: 5rem;
+            background-color: #eaeaea;
+            z-index: 9999;
+            width: 1px;
+        }
+    }
+}
