--- a/web/app/themes/tennis-majors-v2/resources/styles/common/pagination.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/pagination.scss
@@ -3,8 +3,11 @@ ul.page-numbers {
 
     li {
         a, span {
-            border: 1px solid;
             @apply mx-1 px-3 py-2 border-black uppercase text-xs;
+
+            &.current {
+                @apply bg-black rounded-full text-white;
+            }
         }
     }
 }
