previous next video

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -8,6 +8,7 @@
 @import 'common/user';
 @import 'common/newsletter';
 @import 'common/pagination';
+@import 'common/previous-next-video';
 
 @import 'header';
 @import 'footer';
