--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -9,6 +9,7 @@
 @import 'common/newsletter';
 @import 'common/pagination';
 @import 'common/previous-next-video';
+@import 'common/live-last-news';
 
 @import 'header';
 @import 'footer';
@@ -35,6 +36,36 @@
         .content {
             transform: translateX(0%);
             opacity: 1;
+        }
+    }
+}
+
+.live-last-news {
+    transition: all ease-in 500ms;
+    max-height: 800px;
+    overflow: hidden;
+}
+
+.live-last-news--hidden {
+    max-height: 0;
+    overflow: hidden;
+}
+
+
+.live-last-news {
+    .live-last-news--active {
+        display: block;
+    }
+}
+
+.live-last-news--toggle {
+    .live-last-news--toggle-border {
+        @apply w-0;
+    }
+
+    &.live-last-news--toggle-active {
+        .live-last-news--toggle-border {
+            @apply w-full;
         }
     }
 }
