--- a/web/app/themes/tennis-majors-v2/public/styles/editor.css
+++ b/web/app/themes/tennis-majors-v2/public/styles/editor.css
@@ -1,3 +1,3 @@
-.block-editor-block-list__layout{font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji}.wp-block{max-width:768px}.wp-block.editor-post-title__block .editor-post-title__input{font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji!important}
+.block-editor-block-list__layout{font-family:futura-pt,ui-sans-serif,system-ui}.wp-block{max-width:768px}.wp-block.editor-post-title__block .editor-post-title__input{font-family:futura-pt,ui-sans-serif,system-ui!important}
 
 /*# sourceMappingURL=editor.css.map*/
