first draft menu

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -9,7 +9,7 @@
 @import 'common/newsletter';
 @import 'common/pagination';
 @import 'common/previous-next-video';
-@import 'common/live-last-news';
+@import 'common/menu';
 
 @import 'header';
 @import 'footer';
