--- a/web/app/themes/tennis-majors-v2/resources/styles/common/newsletter.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/newsletter.scss
@@ -1,30 +1,34 @@
 .home {
     .newsletter-form {
-        @apply  bg-black text-white px-4 mt-8;
+        @apply  bg-black text-white px-4 sm:mt-8;
     }
     
     .newsletter-form-container {
-        @apply grid grid-cols-12 max-w-screen-xl gap-x-8 m-auto py-8;
+        @apply grid sm:grid-cols-12 sm:max-w-screen-xl sm:gap-x-8 sm:m-auto py-8;
     }
     
     .newsletter-form-image-box {
-        @apply col-span-3 relative;
+        @apply pb-16 sm:col-span-3 relative;
 
         img {
-            @apply w-full;
+            @apply w-28 sm:w-full;
         }
 
         .padding {
-            @apply w-full pb-100-100;
+            @apply sm:w-full sm:pb-1/1;
         }
+    }
+
+    .little-baseline {
+        @apply mt-2;
     }
     
     .newsletter-form-baseline {
-        @apply col-span-4 flex items-center;
+        @apply sm:col-span-4 flex items-center;
     }
     
     .newsletter-form-form {
-        @apply col-span-5 flex items-center;
+        @apply sm:col-span-5 flex items-center;
     }
 }
 
