--- a/web/app/themes/tennis-majors-v2/resources/styles/common/slick.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/slick.scss
@@ -3,16 +3,18 @@
 }
 
 .slick-slide {
-margin: 0.5rem;
-}
-
-.slick-slide {
-    margin: 0.35rem;
+margin: 0.35rem;
 }
 
 #live-last-news-slider {
+    .slick-track {
+        margin: auto -1.75rem;
+    }
+
     .slick-slide {
         position: relative;
+        padding: 0 2rem;
+        margin: 0;
 
         &::after {
             content: "";
