--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -1,33 +1,37 @@
 .preview {
     &--news-more {
         &:first-child {
-            @apply row-span-2 col-span-1 rounded-md bg-gray-100 p-5 relative overflow-hidden text-white block flex items-end;
+            @apply row-span-1 col-span-3 grid grid-cols-12 gap-4 md:row-span-2 md:col-span-1 md:rounded-md md:bg-gray-100 md:p-5 md:relative md:overflow-hidden text-white;
 
             .content {
-                @apply relative z-10;
+                @apply relative z-10 col-span-8;
 
                 .title {
-                    @apply uppercase text-2xl;
+                    @apply md:uppercase md:text-2xl;
                 }
             }
 
             .thumbnail {
-                @apply absolute w-full h-full object-cover top-0 left-0;
+                @apply col-span-4 md:absolute md:w-full md:h-full md:object-cover md:top-0 md:left-0;
 
                 img {
-                    @apply object-cover h-full w-full;
+                    @apply md:object-cover md:h-full md:w-full;
                 }
             }
         }
 
-        @apply row-span-1 col-span-1 grid grid-cols-12 gap-4;
+        @apply row-span-1 col-span-3 md:col-span-1 grid grid-cols-12 gap-4;
 
         .content {
-            @apply relative col-span-7;
+            @apply relative col-span-8;
         }
 
         .thumbnail {
-            @apply relative col-span-5;
+            @apply relative col-span-4;
+
+            img {
+                @apply md:object-cover md:h-full md:w-full;
+            }
         }
     }
 
