--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -1,6 +1,8 @@
 .article-container {
-    article {
-        max-width: calc(100% - 6rem);
+    &--default {
+        article {
+            @apply md:max-w-article-default;
+        }
     }
 
     .content {
