--- a/web/app/themes/tennis-majors-v2/public/styles/editor.css
+++ b/web/app/themes/tennis-majors-v2/public/styles/editor.css
@@ -1,3 +1,13 @@
-.block-editor-block-list__layout{font-family:futura-pt,ui-sans-serif,system-ui}.wp-block{max-width:768px}.wp-block.editor-post-title__block .editor-post-title__input{font-family:futura-pt,ui-sans-serif,system-ui!important}
+.block-editor-block-list__layout {
 
-/*# sourceMappingURL=editor.css.map*/
+    font-family: futura-pt, ui-sans-serif, system-ui
+}
+
+.wp-block {
+
+    max-width: 768px
+}
+.wp-block.editor-post-title__block .editor-post-title__input {
+
+    font-family: futura-pt, ui-sans-serif, system-ui !important
+}
