major-team responsive

--- a/web/app/themes/tennis-majors-v2/resources/styles/common/user.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/user.scss
@@ -3,3 +3,11 @@
         @apply relative;
     }
 }
+
+#major-page {
+    .user {
+        &--major {
+            @apply w-full max-w-85vw sm:max-w-majoruserpage;
+        }
+    }
+}
