--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -26,8 +26,12 @@
             @apply max-w-screen-sm m-auto pb-4;
         }
 
+        img  {
+            @apply mt-4 mb-8 md:mt-12 md:mb-14;
+        }
+
         blockquote {
-            @apply mt-36 mb-10 relative px-4;
+            @apply mt-36 mb-10 md:mb-20 relative px-4;
 
             &::before {
                 @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
@@ -36,7 +40,7 @@
             }
 
             p {
-                @apply max-w-screen-xl uppercase font-bold text-2xl lg:text-5xl not-italic px-0;
+                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-5xl not-italic px-0;
             }
 
             cite {
