--- a/web/app/themes/tennis-majors-v2/resources/styles/common/previous-next-video.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/previous-next-video.scss
@@ -1,23 +1,24 @@
 .prev-next {
-    @apply fixed top-1/2 transform -translate-y-1/2 z-50;
+    @apply xl:fixed xl:top-1/2 xl:transform xl:-translate-y-1/2 xl:z-50;
 
     &--container {
         @apply relative;
     }
 
     &--arrow {
-        @apply w-14 h-14 bg-black bg-center bg-no-repeat;
+        @apply hidden xl:block w-14 h-14 bg-black bg-center bg-no-repeat;
     }
 
     &--prev {
         @apply left-0;
 
         .prev-next--arrow {
+            @apply hidden xl:block;
             background-image: url(../images/arrow-left-white.svg);
         }
 
         .prev-next--content {
-            @apply pl-14;
+            @apply xl:pl-14 xl:bg-auto;
             background: no-repeat 1rem center/auto url(../images/arrow-left-white.svg) black;
         }
 
@@ -32,11 +33,12 @@
         @apply right-0;
 
         .prev-next--arrow {
+            @apply hidden xl:block;
             background-image: url(../images/arrow-right-white.svg);
         }
 
         .prev-next--content {
-            @apply pr-14 right-0;
+            @apply xl:pr-14 right-0 bg-none xl:bg-auto;
             background: no-repeat 17rem center/auto url(../images/arrow-right-white.svg) black;
         }
 
@@ -48,6 +50,20 @@
     }
 
     &--content {
-        @apply absolute w-80 p-4 py-8 bg-black text-white top-1/2 transform -translate-y-1/2 transition ease-in-out duration-300;
+        @apply xl:absolute xl:w-80 p-4 xl:py-8 bg-black text-white xl:top-1/2 xl:transform xl:-translate-y-1/2 transition ease-in-out duration-300;
+    }
+}
+
+.prev-next {
+    &--prev {
+        .prev-next--content {
+            background: no-repeat 1rem center/auto url(../images/arrow-left-white.svg) black;
+        }
+    }
+
+    &--next {
+        .prev-next--content {
+            background: no-repeat 17rem center/auto url(../images/arrow-right-white.svg) black;
+        }
     }
 }
