fix figures videos, facet home, link author, mute live video, placeholder video url

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -67,3 +67,11 @@
         }
     }
 }
+
+.videos .content .iframe-container {
+    display: none;
+}
+
+.videos .content .video-container {
+    display: none;
+}
