--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -1,4 +1,5 @@
-.article-container {
+.article-container,
+.single-videos {
     &--default {
         article {
             @apply md:max-w-article-default;
@@ -17,12 +18,24 @@
         p {
             @apply px-4 pb-4 text-xl;
         }
+
+        ul {
+            @apply list-disc text-xl;
+        }
+
+        li {
+            @apply ml-16;
+        }
+
+        a {
+            @apply underline opacity-70 hover:opacity-100;
+        }
     }
 }
 
 .feature {
     .content {
-        h1, h2, h3, h4, h5, h6, p {
+        h1, h2, h3, h4, h5, h6, p, ul {
             @apply max-w-screen-sm m-auto pb-4;
         }
 
@@ -39,7 +52,7 @@
                 background-image: url(../images/quote.png);
             }
 
-            p {
+            p, ul{
                 @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-5xl not-italic px-0;
             }
 
@@ -64,6 +77,34 @@
             content: '';
             @apply absolute w-full bottom-0 bg-gray-200 -z-1;
             height: 4rem;
+        }
+    }
+
+    .content {
+        h1, h2, h3, h4, h5, h6, p, ul {
+            @apply max-w-screen-sm m-auto pb-4;
+        }
+
+        img  {
+            @apply mt-4 mb-8 md:mt-12 md:mb-14;
+        }
+
+        blockquote {
+            @apply mt-36 mb-10 md:mb-20 relative px-4;
+
+            &::before {
+                @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
+                content: "";
+                background-image: url(../images/quote.png);
+            }
+
+            p {
+                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-5xl not-italic px-0;
+            }
+
+            cite {
+                @apply not-italic;
+            }
         }
     }
 }
