--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -7,7 +7,7 @@
     }
 
     .content {
-        h2, h3, h4, h5, h6, p {
+        h2, h3, h4, h5, h6, p, ul {
             @apply mb-6 px-4;
         }
 
@@ -28,7 +28,7 @@
         }
 
         a {
-            @apply underline opacity-70 hover:opacity-100;
+            @apply underline text-gray-700 hover:text-black;
         }
     }
 }
