Fix singles styles again

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -20,7 +20,7 @@
         }
 
         ul {
-            @apply list-disc text-xl;
+            @apply list-disc text-lg;
         }
 
         li {
