--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -16,6 +16,7 @@
 @import 'home';
 @import 'single';
 @import 'archive';
+@import 'diaporama';
 
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
