delete field news on top

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -29,6 +29,10 @@
 
         a {
             @apply underline text-gray-700 hover:text-black;
+
+            .btn--cta {
+                @apply no-underline text-white;
+            }
         }
     }
 }
