--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -53,7 +53,7 @@
             @apply mt-4 mb-8 md:mt-12 md:mb-14;
         }
 
-        blockquote {
+        blockquote.wp-block-quote {
             @apply mt-36 mb-10 md:mb-20 relative px-4;
 
             &::before {
