--- a/web/app/themes/tennis-majors-v2/resources/styles/diaporama.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/diaporama.scss
@@ -52,7 +52,7 @@
                 margin-bottom: 0.5rem;
             }
 
-            .legend_excerpt {
+            .legend_excert {
                 p {
                     padding-left: 0 !important;
                     padding-right: 0 !important;
