--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -22,6 +22,10 @@
 @import 'tailwindcss/utilities';
 @import  'slick-carousel/slick/slick.css';
 
+.slick-disabled {
+    display: none !important;
+}
+
 #reply-title {
     display: none;
 }
