Finished fixing old shortcode

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -101,10 +101,10 @@
     }
 }
 
-.videos .content .iframe-container {
+.videos .content .inherited-shortcode {
     display: none;
 }
 
-.videos .content .video-container {
+.videos .content .inherited-shortcode-video {
     display: none;
 }
