Fix video player in content

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -101,6 +101,7 @@
     }
 }
 
-.videos .content .inherited-shortcode {
+.videos .content .inherited-shortcode-video,
+.videos .content .inherited-shortcode-iframe {
     display: none;
 }
