read also & hover

--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -7,7 +7,7 @@
     }
 
     .content {
-        h2, h3, h4, h5, h6, p, ul {
+        h2, h3, h4, h5, h6, p, ul, .read-also {
             @apply mb-6 px-4;
         }
 
@@ -33,6 +33,11 @@
             }
         }
 
+        .instagram-media, .twitter-tweet {
+            margin: 2rem auto !important;
+            width: 100% !important;
+        }
+
         .video-container {
             @apply  relative h-0 pb-16/9 mb-6;
 
@@ -45,12 +50,18 @@
 
 .feature {
     .content {
-        h1, h2, h3, h4, h5, h6, p, ul {
+        h1, h2, h3, h4, h5, h6, p, ul, .read-also {
             @apply max-w-screen-sm m-auto pb-4;
         }
 
         img  {
             @apply mt-4 mb-8 md:mt-12 md:mb-14;
+        }
+
+        .read-also {
+            img  {
+                @apply mt-0 mb-0 md:mt-0 md:mb-0;
+            } 
         }
 
         blockquote.wp-block-quote {
