font-bold and fix home

--- a/web/app/themes/tennis-majors-v2/resources/styles/app.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/app.scss
@@ -98,3 +98,23 @@
         overflow: hidden;
     }
 }
+
+.number-size-1 {
+    font-weight: 800;
+}
+
+.number-size-2 {
+    font-weight: 700;
+}
+
+.number-size-3 {
+    font-weight: 600;
+}
+
+.number-size-4 {
+    font-weight: 500;
+}
+
+.number-size-5 {
+    font-weight: 300;
+}
