--- a/web/app/themes/tennis-majors-v2/resources/styles/common/menu.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/menu.scss
@@ -79,10 +79,14 @@ header {
             }
     
             ul.sub-menu {
-                @apply pl-6 pt-2 hidden sm:absolute sm:left-1/2 sm:top-0 sm:pl-40 sm:opacity-0;
+                @apply pl-6 pt-2 text-sm hidden sm:absolute sm:left-1/2 sm:top-0 sm:pl-40 sm:opacity-0;
     
                 li {
-                    @apply text-xl sm:text-3xl capitalize;
+                    @apply text-xl sm:text-2xl capitalize mb-2;
+
+                    &.menu-item--top {
+                        @apply uppercase font-normal mb-3;
+                    }
                 }
             }
         }
