--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -1,14 +1,8 @@
 .article-container,
 .single-videos {
-    &--default {
-        article {
-            @apply md:max-w-article-default;
-        }
-    }
-
     .content {
-        h2, h3, h4, h5, h6, p, ul, .read-also {
-            @apply mb-6 px-4;
+        h2, h3, h4, h5, h6, p, ul, ol, .read-also {
+            @apply mb-8 px-4;
         }
 
         h2 {
@@ -16,15 +10,15 @@
         }
 
         p {
-            @apply px-4 pb-4 text-xl;
+            @apply px-4 text-xl;
         }
 
         ul {
-            @apply list-disc text-lg;
+            @apply list-disc text-xl ml-20;
         }
 
-        li {
-            @apply ml-16;
+        ol {
+            @apply list-decimal text-xl ml-20;
         }
 
         p {
@@ -50,7 +44,7 @@
 
 .feature {
     .content {
-        h1, h2, h3, h4, h5, h6, p, ul, .read-also {
+        h1, h2, h3, h4, h5, h6, p, ul, ol, .read-also {
             @apply max-w-screen-sm m-auto pb-4;
         }
 
@@ -102,7 +96,7 @@
     }
 
     .content {
-        h1, h2, h3, h4, h5, h6, p, ul {
+        h1, h2, h3, h4, h5, h6, p, ul, ol {
             @apply max-w-screen-sm m-auto pb-4;
         }
 
