--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -3,7 +3,7 @@
         &:first-child {
             @apply row-span-1 col-span-3 grid grid-cols-12 gap-4 md:row-span-2 md:col-span-1 md:rounded-md md:bg-gray-100 md:p-5 md:relative md:overflow-hidden text-white;
 
-            .content {
+            .content-more {
                 @apply relative z-10 col-span-8;
 
                 .title {
@@ -22,15 +22,19 @@
 
         @apply row-span-1 col-span-3 md:col-span-1 grid grid-cols-12 gap-4;
 
-        .content {
+        .content-more {
             @apply relative col-span-8;
         }
 
+        .thumbnail-container {
+            @apply col-span-4;
+        }
+
         .thumbnail {
-            @apply relative col-span-4;
+            @apply relative pb-1/1 h-0;
 
             img {
-                @apply md:object-cover md:h-full md:w-full;
+                @apply absolute top-0 md:object-cover md:h-full md:w-full;
             }
         }
     }
@@ -56,7 +60,7 @@
     }
 
     &--video {
-        @apply rounded-md bg-gray-100 h-0 pb-12/10 sm:pb-16/9 block max-w-little-video-show sm:max-w-video-show relative overflow-hidden text-white mx-2;
+        @apply rounded-md bg-gray-100 h-0 pb-16/9 block max-w-little-video-show sm:max-w-video-show relative overflow-hidden text-white mx-2;
 
         &-major {
             @apply max-w-full;
