--- a/web/app/themes/tennis-majors-v2/resources/styles/single.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/single.scss
@@ -39,17 +39,41 @@
                 @apply absolute w-full h-full;
             }
         }
+
+        blockquote.wp-block-quote {
+            @apply mt-36 mb-10 md:mb-20 relative px-4 max-w-screen-lg m-auto;
+        
+            &::before {
+                @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
+                content: "";
+                background-image: url(../images/quote.png);
+            }
+        
+            p, ul{
+                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-3xl px-0;
+            }
+        
+            cite {
+                @apply not-italic;
+            }
+        }
     }
 }
 
 .feature {
     .content {
+        @apply mt-12;
+
         h1, h2, h3, h4, h5, h6, p, ul, ol, .read-also {
-            @apply max-w-screen-sm m-auto pb-4;
+            @apply m-auto pb-4 max-w-screen-sm;
+        }
+
+        h2 {
+            @apply mt-3;
         }
 
         img  {
-            @apply mt-4 mb-8 md:mt-12 md:mb-14;
+            @apply m-auto pt-4 pb-8 md:pt-12 md:pb-14;
         }
 
         .read-also {
@@ -59,18 +83,18 @@
         }
 
         blockquote.wp-block-quote {
-            @apply mt-36 mb-10 md:mb-20 relative px-4;
-
+            @apply mt-36 mb-10 md:mb-20 relative px-4 max-w-screen-lg m-auto;
+        
             &::before {
                 @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
                 content: "";
                 background-image: url(../images/quote.png);
             }
-
+        
             p, ul{
-                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-5xl not-italic px-0;
+                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-3xl px-0;
             }
-
+        
             cite {
                 @apply not-italic;
             }
@@ -96,12 +120,36 @@
     }
 
     .content {
+        @apply mt-12;
+
         h1, h2, h3, h4, h5, h6, p, ul, ol {
-            @apply max-w-screen-sm m-auto pb-4;
+            @apply m-auto pb-4 max-w-screen-sm;
+        }
+
+        h2 {
+            @apply mt-3;
         }
 
         img  {
-            @apply mt-4 mb-8 md:mt-12 md:mb-14;
+            @apply m-auto pt-4 pb-8 md:pt-12 md:pb-14;
+        }
+
+        blockquote.wp-block-quote {
+            @apply mt-36 mb-10 md:mb-20 relative px-4 max-w-screen-lg m-auto;
+        
+            &::before {
+                @apply absolute w-20 h-20 -top-4 left-4  transform -translate-y-full bg-contain bg-no-repeat;
+                content: "";
+                background-image: url(../images/quote.png);
+            }
+        
+            p, ul{
+                @apply max-w-screen-lg uppercase font-bold text-2xl lg:text-3xl px-0;
+            }
+        
+            cite {
+                @apply not-italic;
+            }
         }
     }
 }
