separator partners news

--- a/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/common/preview.scss
@@ -75,7 +75,7 @@
         }
 
         .title {
-            @apply absolute top-16 sm:relative sm:top-auto uppercase font-bold text-sm;
+            @apply absolute bottom-8 uppercase font-bold text-sm w-title-video;
         }
     }
 
@@ -150,7 +150,7 @@
     }
 
     &--show {
-        @apply block sm:pb-16/9 sm:relative text-white md:rounded-lg overflow-hidden;
+        @apply block md:pb-16/9 sm:relative text-white md:rounded-lg overflow-hidden;
 
         .container {
             @apply grid grid-cols-12;
