--- a/web/app/themes/tennis-majors-v2/resources/styles/home.scss
+++ b/web/app/themes/tennis-majors-v2/resources/styles/home.scss
@@ -7,3 +7,24 @@
     background-color: black;
     z-index: -1;
 }
+
+#partners {
+    &::after {
+        content: "";
+        width: 110vw;
+        height: 10rem;
+        background-color: black;
+        position: absolute;
+        bottom: -6rem;
+        transform: rotate(-6deg);
+        left: -1rem;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    #partners {
+        &::after {
+            transform: rotate(-4deg);
+        }
+    }
+}
